--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
     <div class="main">
-        <div class="progressbar2">
-            <div class="progressbar2__container">
-                <div class="progressbar2__content">
+        <div class="progressbar">
+            <div class="progressbar__container">
+                <div class="progressbar__content">
                     <svg viewbox="-5 -5 150 150">
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
     
-                    <div class="progressbar2__number">
+                    <div class="progressbar__number">
                         <h2>90</h2>
                     </div>
                 </div>
